--- a/data/TMT_data/balanced_data/archive/combined/Proteomics_Normalization_innerJoin.Rmd
+++ b/data/TMT_data/balanced_data/archive/combined/Proteomics_Normalization_innerJoin.Rmd
@@ -56,15 +56,15 @@ preprocess_mxout <- function(path, center_metadata, center){
     print(center)
     # take only the columns that we need
     pg_intensities <- PG_report %>%
-        select(c("Protein.IDs", "Gene.names", rownames(center_metadata)))
+        select(c("Majority.protein.IDs", "Gene.names", rownames(center_metadata)))
 
-    print(length(pg_intensities$Protein.IDs))
+    print(length(pg_intensities$"Majority.protein.IDs"))
 
     # counts
     pg_counts <- PG_report %>%
-        select(c("Protein.IDs", "Razor...unique.peptides")) 
-    rownames(pg_counts) <- pg_counts$Protein.IDs
-    pg_counts$Protein.IDs <- NULL
+        select(c("Majority.protein.IDs", "Razor...unique.peptides")) 
+    rownames(pg_counts) <- pg_counts$Majority.protein.IDs
+    pg_counts$Majority.protein.IDs <- NULL
     pg_counts <- pg_counts + 1
     return(list(pg_intensities, pg_counts))    
 }
@@ -79,7 +79,7 @@ preprocess_mxout <- function(path, center_metadata, center){
 
 save_plots <- TRUE
 # Define the final output directory or set NULL if results should note be saved
-final_out_dir <-  paste0("/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/combined/normalization_results_full")
+final_out_dir <-  paste0("/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/combined/normalization_results_inner")
 # Creates the folder if it doesn't exist
 if(!is.null(final_out_dir)){dir.create(final_out_dir, recursive = TRUE, showWarnings = FALSE)}
 ```
@@ -150,17 +150,17 @@ for(center in names(list_of_outputs)) {
     pg_intensities <- results_list[[1]]
     counts_df <- results_list[[2]]
 
-    pg_intensities <- pg_intensities[, c("Protein.IDs", "Gene.names", rownames(center_metadata))]
-    colnames(pg_intensities) <- c("Protein.IDs", "Gene.names", center_metadata$Quantitative.column.name)
+    pg_intensities <- pg_intensities[, c("Majority.protein.IDs", "Gene.names", rownames(center_metadata))]
+    colnames(pg_intensities) <- c("Majority.protein.IDs", "Gene.names", center_metadata$Quantitative.column.name)
     
     if(!(nrow(combined_pg_intensities) == 0)) {
-        # combined_pg_intensities <- full_join(combined_pg_intensities, pg_intensities, by = c("Protein.IDs", "Gene.names"))
+        combined_pg_intensities <- inner_join(combined_pg_intensities, pg_intensities, by = c("Majority.protein.IDs", "Gene.names"))
     } else {
         combined_pg_intensities <- pg_intensities
     }
 }
 
-combined_pg_intensities <- combined_pg_intensities[, c("Protein.IDs", "Gene.names", metadata$Quantitative.column.name)]
+combined_pg_intensities <- combined_pg_intensities[, c("Majority.protein.IDs", "Gene.names", metadata$Quantitative.column.name)]
 dim(combined_pg_intensities)
 
 
@@ -260,7 +260,7 @@ com_ref_sets <- md[grep("Common Reference", Condition), Condition]
 comref_meta_data <- md[Condition %in% com_ref_sets]$Column
 
 se <- load_data(data = prot_data, md = md, 
-                protein_column = "Protein.IDs", gene_column = "Gene.names", 
+                protein_column = "Majority.protein.IDs", gene_column = "Gene.names", 
                 ref_samples = comref_meta_data, 
                 batch_column = "Batch", condition_column = "Condition", label_column = "Label")
 
@@ -441,7 +441,7 @@ These methods can be applied individually or in various combinations to suit the
 
 ```{r}
 # Define normalization methods
-normalization_methods <- c("Median", "IRS", "limBE", "limBE_on_Median", "IRS_on_Median", "limBE_on_IRS_on_Median") 
+normalization_methods <- c("IRS", "limBE", "limBE_on_Median", "IRS_on_Median", "limBE_on_IRS_on_Median", "Median_on_IRS", "limBE_on_Median_on_IRS") 
 combination_pattern <- "_on_" # Set to NULL for individual methods
 
 # Normalize the SummarizedExperiment object
