checked sorting and alphapept PG groups

--- a/data/TMT_data/02_peptides_merging_network.ipynb
+++ b/data/TMT_data/02_peptides_merging_network.ipynb
@@ -392,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aggragate peptides to PG / Genes using mapping"
+    "## Aggragate peptides to PG / Genes using mapping"
    ]
   },
   {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
      "text": [
       "Center2 done\n",
       "Number of peptides: 6303\n",
-      "Number of peptides in merged mapping without NAs: 6303\n"
+      "Number of peptides in merged mapping without NAs: 6143\n"
      ]
     }
    ],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,16 +683,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(583, 4)\n",
-      "(6303, 4)\n",
-      "Number of proteins in grouped data: 583\n"
+      "(526, 4)\n",
+      "(6143, 4)\n",
+      "Number of proteins in grouped data: 526\n"
      ]
     }
    ],
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,14 +719,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of unique peptides: 529\n"
+      "Number of unique peptides: 501\n"
      ]
     }
    ],
