--- a/data/TMT_data/02_peptides_merging_network.ipynb
+++ b/data/TMT_data/02_peptides_merging_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -32,12 +32,16 @@
     }
    ],
    "source": [
-    "# # CLIENT LEVEL\n",
-    "path_to_data = '/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/04_Peptides_PG'\n",
-    "feature_column = 'Proteins'\n",
+    "# # # CLIENT LEVEL\n",
+    "# path_to_data = '/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/04_Peptides_PG'\n",
+    "# feature_column = 'Proteins'\n",
     "\n",
     "# path_to_data = '/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/03_Peptides_Genes'\n",
     "# feature_column = 'Gene.names'\n",
+    "\n",
+    "# filter_rev check \n",
+    "# path_to_data = '/home/yuliya/repos/cosybio/FedProt/data/TMT_data/mapping_filtering_check/custom_NR/'\n",
+    "# feature_column = 'Proteins'\n",
     "\n",
     "centers = ['Center1', 'Center2', 'Center3']\n",
     "\n",
@@ -57,15 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of peptides in merged mapping: 8044\n",
-      "Number of peptides in merged mapping without NAs: 8044\n"
+      "Number of peptides in merged mapping: 8824\n",
+      "Number of peptides in merged mapping without NAs: 8824\n"
      ]
     }
    ],
@@ -88,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +228,7 @@
        "0        P05154  P05154;G3V2M1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,13 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "for center in centers:\n",
-    "    aggregated_report = pd.read_csv(f'{path_to_data}/{center}/aggregated_NF.tsv', sep='\\t')\n",
-    "    final_matching = pd.read_csv(f'{path_to_data}/{center}/mapping.tsv', sep='\\t')\n",
+    "    aggregated_report = pd.read_csv(f'{path_to_data}/{center}aggregated_NF.tsv', sep='\\t')\n",
+    "    final_matching = pd.read_csv(f'{path_to_data}/{center}mapping.tsv', sep='\\t')\n",
     "\n",
     "    ################################  MERGE MAPPING WITH AGGREGATED REPORT  ################################\n",
     "    # rename peptides to Sequence\n",
@@ -300,13 +304,12 @@
     "    # Group by major_features and sum intensities for each group\n",
     "    intensities[center].drop(columns=['Reverse', 'Potential.contaminant'], inplace=True)\n",
     "    intensities[center] = intensities[center].groupby('major_features').sum().reset_index()\n",
-    "    intensities[center] = pd.merge(intensities[center], reverse_contaminants, on='major_features', how='left')\n",
     "\n",
-    "    ################################  WRITE TO FILE  ################################\n",
-    "    # write to file\n",
+    "    ################################  WRITE TO FILE  ################################    # write to file\n",
     "    intensities[center].to_csv(f'{path_to_data}/{center}/intensities_counts_ALL.tsv', sep='\\t', index=False)\n",
     "\n",
-    "    # filter out contaminants and reverse hits\n",
+    "    # filter out contaminants and reverse hit\n",
+    "    intensities[center] = pd.merge(intensities[center], reverse_contaminants, on='major_features', how='left')\n",
     "    intensities[center] = intensities[center][intensities[center]['Reverse_mark'] != '+']\n",
     "    intensities[center] = intensities[center][intensities[center]['Potential.contaminant_mark'] != '+']\n",
     "    intensities[center].drop(columns=['Reverse_mark', 'Potential.contaminant_mark'], inplace=True)\n",
@@ -314,7 +317,7 @@
     "    # save only intensities to file (without unique_razor_counts column)\n",
     "    intensities[center].drop(columns=['unique_razor_counts']).to_csv(f'{path_to_data}/{center}/intensities_filtered.tsv', sep='\\t', index=False)\n",
     "    # save only unique_razor_counts to file\n",
-    "    intensities[center][['major_features', 'unique_razor_counts']].to_csv(f'{path_to_data}/{center}/counts_filtered_withinCenter.tsv', sep='\\t', index=False)\n",
+    "    # intensities[center][['major_features', 'unique_razor_counts']].to_csv(f'{path_to_data}/{center}/counts_filtered_withinCenter.tsv', sep='\\t', index=False)\n",
     "\n",
     "\n",
     "    "
